--- a/CNN_MNIST.ipynb
+++ b/CNN_MNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "718864c3",
+   "id": "c4d7471c",
    "metadata": {},
    "source": [
     "# Convolutional Neural Networks for Image Classification"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d32f224d",
+   "id": "b31ee021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7881e854",
+   "id": "90812047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c09b011a",
+   "execution_count": 140,
+   "id": "1698c417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c8224f",
+   "id": "cbafe3c9",
    "metadata": {},
    "source": [
     "# Visualizing the Image Data"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6b65534a",
+   "id": "25adc6f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8fc5c84",
+   "id": "7668160e",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a4efad7c",
+   "id": "d789480f",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0cd7df63",
+   "id": "26e32383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "177291ea",
+   "id": "b593ebc7",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "56260770",
+   "id": "d3f7ece8",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0e13aff2",
+   "id": "635b86b6",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26425a0",
+   "id": "8c095901",
    "metadata": {},
    "source": [
     "# PreProcessing Data"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a805e334",
+   "id": "0b141998",
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c059cc6c",
+   "execution_count": 141,
+   "id": "bab8ff14",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "257e3410",
+   "id": "1ec4ae12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc0adf41",
+   "id": "5e6d4ef0",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f6fe3f81",
+   "id": "51965188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8f0fed0c",
+   "id": "beee3b61",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "205e520a",
+   "id": "233f3088",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6f716b57",
+   "id": "b1b779eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "59615ce1",
+   "id": "a5d40fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "43677952",
+   "id": "2b10615a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1326b8c9",
+   "id": "8614576c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7716592a",
+   "id": "9c793bd7",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f720cb33",
+   "id": "5c97a3bc",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559d85da",
+   "id": "594ddc0b",
    "metadata": {},
    "source": [
     "# Reshaping the Data"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d8ad653a",
+   "id": "b1552bc0",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a1fd112f",
+   "id": "7a7e4ad8",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a47d3208",
+   "id": "7d594036",
    "metadata": {},
    "outputs": [
     {
@@ -581,8 +581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "e0e409eb",
+   "execution_count": 142,
+   "id": "135ef982",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "(10000,)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "114215e1",
+   "id": "728bff90",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c6bb4b6d",
+   "id": "c18189b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f778c5ab",
+   "id": "8f2413bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5f6e4d",
+   "id": "344a7e19",
    "metadata": {},
    "source": [
     "# Training the Model"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "aba3d038",
+   "id": "2e27c6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "011e85c6",
+   "id": "e9a6582b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "30e81cdd",
+   "id": "0205fc86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ffed9f4b",
+   "id": "83fc1d0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "5a7993f6",
+   "id": "26af6194",
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "42edca71",
+   "id": "7b6ebb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "7e6cd93c",
+   "id": "e7558a5c",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "23245cce",
+   "id": "15be7a81",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "883758e5",
+   "id": "947ac6a8",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "b7067327",
+   "id": "070eeb43",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "5801db2f",
+   "id": "1d3f6a56",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "edb67439",
+   "id": "b2ca3522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,8 +944,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "9e17dee9",
+   "execution_count": 117,
+   "id": "e8b3109a",
    "metadata": {},
    "outputs": [
     {
@@ -962,8 +962,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "cb37e45e",
+   "execution_count": 119,
+   "id": "a6812c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 1s 3ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred1 = np.argmax(model.predict(x_test), axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "b8134ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 2, 1, ..., 4, 5, 6], dtype=int64)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "68d0ffa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "219c9539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 1s 3ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred2 = np.argmax(model.predict(x_test), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "e057d5ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 2, 1, ..., 4, 5, 6], dtype=int64)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "881d8434",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +1077,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,8 +1088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "b0a9f677",
+   "execution_count": 148,
+   "id": "d029f9d7",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1098,7 @@
        "(10000, 10)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,8 +1109,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "b0b72806",
+   "execution_count": 152,
+   "id": "873eceb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "bf30fb8f",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1140,7 @@
        "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,8 +1151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "58a58bf8",
+   "execution_count": 155,
+   "id": "f1036cdc",
    "metadata": {},
    "outputs": [
     {
@@ -1071,6 +1191,121 @@
    "source": [
     "print(classification_report(y_cat_test,predictions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "c62b2318",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98       980\n",
+      "           1       1.00      0.92      0.96      1135\n",
+      "           2       0.98      0.89      0.94      1032\n",
+      "           3       0.99      0.92      0.95      1010\n",
+      "           4       0.97      0.98      0.97       982\n",
+      "           5       1.00      0.90      0.95       892\n",
+      "           6       0.99      0.96      0.97       958\n",
+      "           7       1.00      0.88      0.93      1028\n",
+      "           8       0.60      1.00      0.75       974\n",
+      "           9       0.98      0.82      0.90      1009\n",
+      "\n",
+      "    accuracy                           0.93     10000\n",
+      "   macro avg       0.95      0.93      0.93     10000\n",
+      "weighted avg       0.95      0.93      0.93     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test,pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "2bed313d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "96edca5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "a1880d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 965,    0,    0,    0,    1,    0,    1,    0,   13,    0],\n",
+       "       [   0, 1046,    1,    2,    0,    0,    1,    0,   85,    0],\n",
+       "       [   5,    0,  922,    0,    3,    0,    4,    2,   96,    0],\n",
+       "       [   0,    0,    5,  930,    0,    1,    0,    0,   74,    0],\n",
+       "       [   0,    0,    0,    0,  960,    0,    0,    0,   21,    1],\n",
+       "       [   2,    0,    0,    4,    1,  806,    6,    0,   71,    2],\n",
+       "       [   4,    1,    0,    0,    4,    0,  919,    0,   30,    0],\n",
+       "       [   1,    1,    9,    2,   12,    0,    0,  903,   90,   10],\n",
+       "       [   2,    0,    0,    0,    0,    0,    0,    0,  972,    0],\n",
+       "       [   2,    1,    0,    0,   10,    0,    0,    0,  166,  830]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test,pred2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760ea1af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
